<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.fredrikbogg.android_chat_app.ui.settings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize">

        <Button
            android:id="@+id/logoutButton"
            style="@style/VeryBoldText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="42dp"
            android:backgroundTint="@color/textError"
            android:onClick="@{() -> viewmodel.logoutUserPressed()}"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/blurredUserImage"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            app:bind_image_url_blur="@{viewmodel.userInfo.profileImageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/userImageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="60dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="@id/blurredUserImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blurredUserImage"
            app:strokeColor="@android:color/white"
            app:strokeWidth="2dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="0dp"
                android:contentDescription="@string/user_image"
                android:scaleType="centerCrop"
                app:bind_image_url="@{viewmodel.userInfo.profileImageUrl}"
                tools:src="@tools:sample/avatars[0]" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/logoutButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userImageCardView">

            <TextView
                android:id="@+id/nameText"
                style="@style/BoldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewmodel.userInfo.displayName}"
                android:textSize="36sp"
                tools:text="Name" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                style="@style/MessageSeen"
                android:text="@{viewmodel.userInfo.status}"
                android:textSize="16sp"
                tools:text="This is a status message" />

            <Button
                android:id="@+id/changeImageButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="24dp"
                android:onClick="@{() -> viewmodel.changeUserImagePressed()}"
                android:text="@string/change_image"
                android:textSize="14sp" />

            <Button
                android:id="@+id/changeStatusButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:onClick="@{() -> viewmodel.changeUserStatusPressed()}"
                android:text="@string/change_status"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>